deploy/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    name: spark-backend
spec:
  selector:
    name: spark-backend
  ports:
  - name: backend
    port: 8081
    targetPort: 8081
    protocol: TCP
