deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
    - host: bdkit.nju.edu.cn
      http:
        paths:
          - path: /bdkit
            backend:
              serviceName: backend-service
              servicePort: 80
